# CinemaGuide

./: .travis.yml  CF.cpp  CMakeLists.txt  README.md  cf.drawio  database.cpp  database_test.cpp  main.cpp  movie.cpp  serv.cpp  test_movie.cpp  user_account.cpp  user_test.cpp
CRIPTING_TEST/: cripting.cpp  file.txt  fileBD.txt  filein.txt  fileout.txt
cmake/: FindMySQL.cmake
include/: connector.h  connectorDB.h  connectorMysql.h  filmConnector.h  userConnector.h
src/: connectorMysql.cpp  filmConnector.cpp  userConnector.cpp
test/: filmTest.cpp  mysqlTest.cpp  userTest.cpp
